--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ hex = "0.4"
 tokio = { version = "1", default-features = false, features = ["macros"] }
 futures = "0.3"
 rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
-reqwest = { version = "0.9", default-features = false }
+reqwest = { version = "0.11", features = ["json"] }
 uuid = { version = "0.8", features = ["v4"] }
 serde_json = "1.0"
 rand = "0.8"
